nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_composite_inferred.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"P :: struct { x: i32 }\\nmk :: func () -> P { return .{ x: 9 } }\\n\")"
---
struct P {
  x: i32
}  // size 4, align 4
func mk() -> P {
  return P { x: $cast(9: comptime_int): i32 }: P
}
