nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_const_generic_length_and_len.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"{ len } :: import <core/slice>\\ncount :: func <const N: usize, T> (a: [N]T) -> usize { return a.len() }\\nf :: func (s: []i32) -> usize {\\n  const a := [_]i32 { 1, 2, 3 }\\n  return count(a) + a.len() + len(s)\\n}\\n\")"
---
func count(a: [N]T) -> usize {
  return $len(((&a: [N]T): *[N]T.*): [N]T): usize
}
func f(s: []i32) -> usize {
  let a: [3]i32 = $array($cast(1: comptime_int): i32, $cast(2: comptime_int): i32, $cast(3: comptime_int): i32): [3]i32
  return #builtin(Add) (core.ops.Add.add: func(usize, usize) -> usize)(#builtin(Add) (core.ops.Add.add: func(usize, usize) -> usize)((count: func([3]i32) -> usize)(a: [3]i32): usize, 3: usize): usize, $len(s: []i32): usize): usize
}
