nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_defer_multiple_recorded_once.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"cleanup :: func () {}\\ndm :: func (c: bool) -> i32 {\\n  defer cleanup()\\n  defer cleanup()\\n  if c { return 1 }\\n  return 2\\n}\\n\")"
---
func cleanup() -> void {
}
func dm(c: bool) -> i32 {
  defer (cleanup: func() -> void)(): void
  defer (cleanup: func() -> void)(): void
  if c: bool {
    return $cast(1: comptime_int): i32
  }
  <if: void>
  return $cast(2: comptime_int): i32
}
