nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_dyn_coercion_and_dispatch.snap
---
source: src/sema/tests.rs
expression: ir_text(src)
---
struct Cat {
  age: i32
}
func go(c: *Cat) -> i32 {
  let j: *dyn ToJson = (c: *Cat as *dyn ToJson from Cat)
  return #virtual(ToJson) (ToJson.render: func(*dyn ToJson) -> i32)(j: *dyn ToJson): i32
}
func render(self: *Cat) -> i32 #recv(ptr) {
  return ((self: *Cat.*): Cat.age): i32
}
