nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_for_desugars_to_loop.snap
---
source: src/sema/tests.rs
expression: "ir_text_lenient(\"consume :: func (x: i32) {}\\nfr :: func (xs: []i32) {\\n  for x in xs { consume(x) }\\n}\\n\")"
---
func consume(x: i32) -> void {
}
func fr(xs: []i32) -> void {
  block: void {
    let __it1: core.iter.SliceIter.<i32> = (core.iter.<impl []T>.into_iter: *func([]i32) -> core.iter.SliceIter.<i32>)(xs: []i32): core.iter.SliceIter.<i32>
    loop {
      match (core.iter.SliceIter.next: *func(*mut core.iter.SliceIter.<i32>) -> core.option.Option.<i32>)((&mut __it1: core.iter.SliceIter.<i32>): *mut core.iter.SliceIter.<i32>): core.option.Option.<i32> {
        block: void {
          tail (consume: *func(i32) -> void)(x: i32): void
        }
        .some(x) => <block: void>
        block: void {
          break 
        }
        _ => <block: void>
      }
      tail <match: void>
    }
    tail <loop: void>
  }
  tail <block: void>
}
