nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_global_const_reference.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"G :: 42\\ngref :: func () -> isize { return G }\\n\")"
---
const G: comptime_int = 42: comptime_int  // = 42
func gref() -> isize {
  return G: isize
}
